# ros2-traffic-project

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
models/T_30/: model.config  model.sdf
models/T_30/meshes/: T_30.dae
models/T_STOP/: model.config  model.sdf
models/T_forward/: model.config  model.sdf
models/T_left/: model.config  model.sdf
models/T_right/: model.config  model.sdf
models/T_tortilla/: model.config  model.sdf
models/T_zebra/: model.config  model.sdf
traffic-sign-v11/: args.yaml  results.csv
turtlebot3/turtlebot3_example/: package.xml
turtlebot3/turtlebot3_slam_toolbox/: CMakeLists.txt
turtlebot3_mogi/: CMakeLists.txt
turtlebot3_mogi/launch/: check_urdf.launch.py  robot_visualization.launch.py  simulation_bringup_line_follow.launch.py  simulation_bringup_navigation_with_slam.launch.py  simulation_bringup_slam.launch.py
turtlebot3_mogi/rviz/: robot_basic.rviz  robot_navigation.rviz  turtlebot3_line_follower.rviz  turtlebot3_navigation.rviz  turtlebot3_slam.rviz
turtlebot3_mogi/worlds/: dark_background.sdf  light_background.sdf  red_line.sdf  turtlebot3_world.sdf
turtlebot3_mogi_py/: package.xml  setup.cfg  setup.py
turtlebot3_mogi_py/turtlebot3_mogi_py/: line_follower.py  line_follower_cnn_robot.py  save_training_images.py
worlds/: project_fixed_all.sdf  project_fixed_all.sdfZone.Identifier  projectproba.sdf
yolo_node/: package.xml  setup.cfg  setup.py
yolo_node/yolo_node/: yolo_claude.py  yolo_copylot.py  yolo_deepseek.py  yolo_gemini.py  yolo_gpt.py  yolo_grok.py  yolo_node.py
(+95 files in other folders)
